Attempting to fix white space issue below footer. Issue shows up on phone but no chrome dev tools.

--- a/src/Home.css
+++ b/src/Home.css
@@ -56,7 +56,7 @@
 .home__content-container{
     display: flex;
     flex-direction: column;
-    min-height: calc(100vh - 100px);
+    /* min-height: calc(100vh - 100px); */
     padding-bottom: 50px;
 }
 
